// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/Fieldset Defaults play-test 1`] = `
<div data-test-block="true">
  <fieldset class="Fieldset_fieldset__gwnkr">
    <legend id="legendId-:r2:"
            class="Fieldset_srOnly__7qh39"
    >
      Ledetekst
    </legend>
    <div class="Fieldset_legend__8odl-"
         aria-hidden="true"
    >
      Ledetekst
    </div>
    <div class="Fieldset_contentContainer__fJcfT">
      <div>
        Innhold
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/Fieldset WithAttributes play-test 1`] = `
<div data-test-block="true">
  <fieldset id="htmlid"
            data-testid="123ID"
            class="Fieldset_fieldset__gwnkr  dummyClassname"
            lang="nb"
            form="123form"
  >
    <legend id="legendId-:r1:"
            class="Fieldset_srOnly__7qh39"
    >
      Ledetekst
    </legend>
    <div class="Fieldset_legend__8odl-"
         aria-hidden="true"
    >
      Ledetekst
    </div>
    <div class="Fieldset_contentContainer__fJcfT">
      <div>
        Innhold
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/Fieldset WithDescription play-test 1`] = `
<div data-test-block="true">
  <fieldset class="Fieldset_fieldset__gwnkr">
    <legend id="legendId-:r3:"
            class="Fieldset_srOnly__7qh39"
    >
      Ledetekst
    </legend>
    <div class="Fieldset_legend__8odl-   Fieldset_legendNoMarginBottom__UO3iu"
         aria-hidden="true"
    >
      Ledetekst
    </div>
    <div class="Help_description__niabw">
      Kort hjelpetekst
    </div>
    <div class="Fieldset_contentContainer__fJcfT">
      <div>
        Innhold
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/Fieldset WithDisabled play-test 1`] = `
<div data-test-block="true">
  <fieldset class="Fieldset_fieldset__gwnkr"
            disabled
  >
    <legend id="legendId-:r9:"
            class="Fieldset_srOnly__7qh39"
    >
      Ledetekst
    </legend>
    <div class="Fieldset_legend__8odl-"
         aria-hidden="true"
    >
      Ledetekst
    </div>
    <div class="Fieldset_contentContainer__fJcfT">
      <div>
        Innhold
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/Fieldset WithHelpTextSvgPathAndTitle play-test 1`] = `
<div data-test-block="true">
  <fieldset class="Fieldset_fieldset__gwnkr">
    <legend id="legendId-:ra:"
            class="Fieldset_srOnly__7qh39"
    >
      Ledetekst
    </legend>
    <div class="Fieldset_legend__8odl-   Fieldset_legendNoMarginBottom__UO3iu"
         aria-hidden="true"
    >
      Ledetekst
    </div>
    <button class="IconButton_button__mw9sG IconButton_button_extraSmall__3+QfY IconButton_button_outlined__aDbNH Help_helpButton__I0E-6"
            type="button"
            aria-describedby="legendId-:ra:"
            aria-expanded="false"
    >
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz IconButton_icon__1J4sN"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:rb:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:rb:">
          Tooltip
        </title>
        <path d="M13 14h-2v-4h2v4Zm0 4h-2v-2h2v2ZM1 21h22L12 2 1 21Z">
        </path>
      </svg>
    </button>
    <div class="Fieldset_contentContainer__fJcfT">
      <div>
        Innhold
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/Fieldset WithHelpToggleEvent smoke-test 1`] = `
<div data-test-block="true">
  <fieldset class="Fieldset_fieldset__gwnkr">
    <legend id="legendId-:re:"
            class="Fieldset_srOnly__7qh39"
    >
      Ledetekst
    </legend>
    <div class="Fieldset_legend__8odl-   Fieldset_legendNoMarginBottom__UO3iu"
         aria-hidden="true"
    >
      Ledetekst
    </div>
    <button class="IconButton_button__mw9sG IconButton_button_extraSmall__3+QfY IconButton_button_outlined__aDbNH Help_helpButton__I0E-6"
            type="button"
            aria-describedby="legendId-:re:"
            aria-expanded="false"
    >
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz IconButton_icon__1J4sN"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:rf:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:rf:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <div class="Fieldset_contentContainer__fJcfT">
      <div>
        Innhold
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/Fieldset WithHideLegend play-test 1`] = `
<div data-test-block="true">
  <fieldset class="Fieldset_fieldset__gwnkr">
    <legend id="legendId-:r6:"
            class="Fieldset_srOnly__7qh39"
    >
      Ledetekst
    </legend>
    <div class="Fieldset_legend__8odl-  Fieldset_srOnly__7qh39 Fieldset_legendNoMarginBottom__UO3iu"
         aria-hidden="true"
    >
      Ledetekst
    </div>
    <button class="IconButton_button__mw9sG IconButton_button_extraSmall__3+QfY IconButton_button_outlined__aDbNH Help_helpButton__I0E-6 Help_srOnly__svaKL"
            type="button"
            aria-describedby="legendId-:r6:"
            aria-expanded="false"
    >
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz IconButton_icon__1J4sN"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r7:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r7:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <div class="Help_description__niabw  Help_srOnly__svaKL">
      Kort hjelpetekst
    </div>
    <div class="Fieldset_contentContainer__fJcfT Fieldset_contentContainerNoMarginTop__YkL1P">
      <div>
        Innhold
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/Fieldset WithLongLegend smoke-test 1`] = `
<div data-test-block="true">
  <fieldset class="Fieldset_fieldset__gwnkr">
    <legend id="legendId-:rd:"
            class="Fieldset_srOnly__7qh39"
    >
      Loremipsumdolorsitamet.Allesomharlagetennettside,trengtlittfylltekstellerbaresurfetrundtpånettetharantageligvissettdisseordene,etterfulgtaventilsynelatendeeviglangtekstfyltmedlatinskeliksomsetninger.
    </legend>
    <div class="Fieldset_legend__8odl-"
         aria-hidden="true"
    >
      Loremipsumdolorsitamet.Allesomharlagetennettside,trengtlittfylltekstellerbaresurfetrundtpånettetharantageligvissettdisseordene,etterfulgtaventilsynelatendeeviglangtekstfyltmedlatinskeliksomsetninger.
    </div>
    <div class="Fieldset_contentContainer__fJcfT">
      <div>
        Innhold
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/Fieldset WithRef play-test 1`] = `
<div data-test-block="true">
  <fieldset class="Fieldset_fieldset__gwnkr"
            id="dummyIdForwardedFromRef"
  >
    <legend id="legendId-:r0:"
            class="Fieldset_srOnly__7qh39"
    >
      Ledetekst
    </legend>
    <div class="Fieldset_legend__8odl-"
         aria-hidden="true"
    >
      Ledetekst
    </div>
    <div class="Fieldset_contentContainer__fJcfT">
      <div>
        Innhold
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/Fieldset WithShowRequiredMark smoke-test 1`] = `
<div data-test-block="true">
  <fieldset class="Fieldset_fieldset__gwnkr">
    <legend id="legendId-:r4:"
            class="Fieldset_srOnly__7qh39"
    >
      Ledetekst
    </legend>
    <div class="Fieldset_legend__8odl- Fieldset_legend_required__U4xWm"
         aria-hidden="true"
    >
      Ledetekst
    </div>
    <div class="Fieldset_contentContainer__fJcfT">
      <div>
        Innhold
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/Fieldset WithShowRequiredMarkAndLegend smoke-test 1`] = `
<div data-test-block="true">
  <fieldset class="Fieldset_fieldset__gwnkr">
    <legend id="legendId-:r5:"
            class="Fieldset_srOnly__7qh39"
    >
      <h1 class="Heading_heading__7K0um Heading_heading_level3__T5BVI  ">
        Dette er en Heading i legend
      </h1>
      <p class="Paragraph_paragraph__NPzKO Paragraph_paragraph_ingress__K1ALx  ">
        <em>
          Dette er en italic Paragraph med ingress variant i legend
        </em>
      </p>
    </legend>
    <div class="Fieldset_legend__8odl- Fieldset_legendWithMarkup_required__WcdUI"
         aria-hidden="true"
    >
      <h1 class="Heading_heading__7K0um Heading_heading_level3__T5BVI  ">
        Dette er en Heading i legend
      </h1>
      <p class="Paragraph_paragraph__NPzKO Paragraph_paragraph_ingress__K1ALx  ">
        <em>
          Dette er en italic Paragraph med ingress variant i legend
        </em>
      </p>
    </div>
    <div class="Fieldset_contentContainer__fJcfT">
      <div>
        Innhold
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/Fieldset WithSpacing smoke-test 1`] = `
<div data-test-block="true">
  <fieldset class="Fieldset_fieldset__gwnkr Fieldset_fieldset_hasSpacing__966Le">
    <legend id="legendId-:r8:"
            class="Fieldset_srOnly__7qh39"
    >
      Ledetekst
    </legend>
    <div class="Fieldset_legend__8odl-"
         aria-hidden="true"
    >
      Ledetekst
    </div>
    <div class="Fieldset_contentContainer__fJcfT">
      <div>
        Innhold
      </div>
    </div>
  </fieldset>
</div>
`;
